force-app/main/default/objects/Payment__c/fields/AccountSAPId__c.field-meta.xml
<CustomField>
    <fullName>AccountSAPId__c</fullName>
    <externalId>true</externalId>
    <label>Account SAP ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>