force-app/main/default/objects/Payment__c/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Due to Mr. Chládek, API name is not by conventions...</description>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>