force-app/main/default/objects/Payment__c/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>