force-app/main/default/objects/Payment__c/fields/InvoiceSAPId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSAPId__c</fullName>
    <label>Invoice SAP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>