force-app/main/default/objects/Payment__c/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <externalId>true</externalId>
    <label>SAP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>