force-app/main/default/objects/Payment__c/fields/SAPOrderId__c.field-meta.xml
<CustomField>
    <fullName>SAPOrderId__c</fullName>
    <externalId>true</externalId>
    <label>Order SAP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>