force-app/main/default/objects/Payment__c/fields/SyncIssueDescription__c.field-meta.xml
<CustomField>
    <fullName>SyncIssueDescription__c</fullName>
    <description>If some problem occurs with pairing to records during sync, this will be described here</description>
    <inlineHelpText>If some problem occurs with pairing to records during sync, this will be described here</inlineHelpText>
    <label>Sync Issue Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>