force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>InvoiceId__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>OrderId__c</columns>
    <columns>Type__c</columns>
    <columns>SAPOrderId__c</columns>
    <columns>AccountSAPId__c</columns>
    <columns>InvoiceSAPId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>